[BZ180512] Adding options to DSE view definition to get rid of misleading (+)

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
@@ -272,6 +272,11 @@
          point="org.eclipse.ui.navigator.viewer">
       <viewer
             viewerId="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator">
+         <options>
+            <property
+                  name="org.eclipse.ui.navigator.enforceHasChildren"
+                  value="true"/> 
+         </options>
          <popupMenu
                allowsPlatformContributions="true"
                id="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator.menu">
