[173576] More driver templates for MySQL

--- a/plugins/org.eclipse.datatools.enablement.mysql.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.mysql.dbdefinition/plugin.properties
@@ -10,7 +10,11 @@
 ###############################################################################
 pluginName=Eclipse Data Tools Platform MySQL Database Definition Plug-in
 providerName=Eclipse.org
-4.0_ProductString = MySql
+4.0_ProductString = MySQL
 4.0_VersionString = 4.0
-4.1_ProductString = MySql
+4.1_ProductString = MySQL
 4.1_VersionString = 4.1
+5.0_ProductString = MySQL
+5.0_VersionString = 5.0
+5.1_ProductString = MySQL
+5.1_VersionString = 5.1
