--- a/plugins/org.eclipse.datatools.enablement.mysql.dbdefinition/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.mysql.dbdefinition/plugin.xml
@@ -18,6 +18,20 @@
             versionDisplayString="%4.1_VersionString"
             file="runtime/vendors/MySql_4.1/MySql_4.1.xmi">
       </definition>
+	  <definition
+            version="5.0"
+            product="MySql"
+            productDisplayString="%5.0_ProductString"
+            versionDisplayString="%5.0_VersionString"
+            file="runtime/vendors/MySql_5.0/MySql_5.0.xmi">
+      </definition>
+	  <definition
+            version="5.1"
+            product="MySql"
+            productDisplayString="%5.1_ProductString"
+            versionDisplayString="%5.1_VersionString"
+            file="runtime/vendors/MySql_5.1/MySql_5.1.xmi">
+      </definition>
    </extension>
 
 </plugin>
