misc updates: getProcIdentifier, SQLExecutionService, SQLEditor Preferences context menu

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/ConstructedSQLEditorResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/ConstructedSQLEditorResources.properties
@@ -58,3 +58,9 @@ AddTemplateAction.label=Save as &Template...
 AddTemplateAction.tooltip=Save Selected Text as Template...
 AddTemplateAction.image=
 AddTemplateAction.description=Save Selected Text as Template...
+
+Editor.ContextPreferencesAction.label=Preferences...
+Editor.ContextPreferencesAction.description=Show preferences
+Editor.ContextPreferencesAction.tooltip=Show Preferences
+Editor.ContextPreferencesAction.image=
+
