[186820] Renamed the ODA XML and Web Services data sources

--- a/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.properties
@@ -1,5 +1,12 @@
 ###############################################################################
-# Copyright (c) 2006 <<Your Company Name here>>
+# Copyright (c) 2007 Actuate Corporation.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#  Actuate Corporation - initial API and implementation
 #
 ###############################################################################
 # Plug-in Configuration
@@ -9,13 +16,11 @@ oda.data.source.id=org.eclipse.datatools.enablement.oda.ws
 ###############################################################################
 # NLS String
 #
-plugin.name=DTP Web Service Data Source ODA Runtime Driver
-data.source.name=DTP Web Service Data Source
-data.set.name=DTP Web Service Data Set
+plugin.name=Eclipse Data Tools Platform Web Services ODA Runtime Driver
+data.source.name=Web Services Data Source
+data.set.name=Web Services Data Set
 
-connection.profile.name=DTP Web Service Data Source Connection Profile
-newwizard.name=DTP Web Service Data Source
-newwizard.description=Create a DTP Web Service Data Source connection profile
+connection.profile.name=Web Services Data Source Connection Profile
 
 datasource.property.soapEndPoint=SOAP End Point
 datasource.property.connectionClass=Connection Class
