--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
@@ -14,20 +14,17 @@
 oda.data.source.id=org.eclipse.datatools.enablement.oda.xml
 #
 ###############################################################################
-# NLS String
-###############################################################################
-oda.xml.datasource=DTP XML DataSource
-oda.xml.dataset=DTP XML DataSet
+# NLS Strings
+#
+oda.xml.datasource=XML Data Source
+oda.xml.dataset=XML Data Set
 oda.xml.tablemapping=Table Mapping
 oda.xml.columnmapping=Column Mapping
 #
-###############################################################################
-# NLS messages
-#
-plugin.name=DTP XML File Designer
-newwizard.name=DTP XML File Data Source
-newwizard.description=Create an DTP XML File connection profile
-wizard.window.title=New XML File Data Source Profile
+plugin.name=Eclipse Data Tools Platform XML ODA Designer
+newwizard.name=XML Data Source
+newwizard.description=Create a XML data source connection profile
+wizard.window.title=New XML Data Source Profile
 wizard.data.source.page.title=Define the URLs to the XML file and schema information
-profile.propertypage.name=DTP XML File Data Source Connection Properties
+profile.propertypage.name=XML Data Source Connection Properties
 preference.datasetpreview=XML Data Set
