--- a/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.properties
@@ -17,16 +17,17 @@ oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
 ###############################################################################
 # NLS String
 ###############################################################################
-oda.data.source.category.name=DTP XML Data Source
+plugin.name=Eclipse Data Tools Platform XML ODA Runtime Driver
+oda.data.source.category.name=XML Data Source
 
-datasource.name=DTP XML Data Source
-dataset.name=DTP XML Data Set
+datasource.name=XML Data Source
+dataset.name=XML Data Set
 
 datasource.property.xmlFile=XML Data Source File
 datasource.property.xmlEncoding=XML Date Source Encoding
 datasource.property.schemaFile=XML Schema File
-oda.data.source.name=DTP XML Files
-connection.profile.name=DTP XML File Data Source Connection Profile
+oda.data.source.name=XML Data Source
+connection.profile.name=XML Data Source Connection Profile
 #
 #  Below NLS messages apply to all ODA data sources; should be re-factored
 #
