[186820] Cleaned up the names to be consistent with the other DTP ODA plugins

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
@@ -6,7 +6,7 @@
 # http://www.eclipse.org/legal/epl-v10.html
 #
 # Contributors:
-#  Actuate Corporation  - initial API and implementation
+#  Actuate Corporation - initial API and implementation
 #
 ###############################################################################
 # Plug-in Profile Configuration
@@ -16,12 +16,12 @@ oda.data.source.id=org.eclipse.datatools.connectivity.oda.flatfile
 ###############################################################################
 # NLS messages
 #
-plugin.name=DTP ODA Flat File Designer
-newwizard.name=ODA Flat File Data Source
+plugin.name=Eclipse Data Tools Platform Flat File ODA Designer
+newwizard.name=Flat File Data Source
 newwizard.description=Create an ODA Flat File connection profile
 wizard.window.title=New Flat File Data Source Profile
 wizard.data.source.page.title=Select Folder
-profile.propertypage.name=ODA Flat File Data Source Connection Properties
+profile.propertypage.name=Flat File Data Source Connection Properties
 wizard.data.set.page.title=Select Columns
 wizard.data.set.title=Select Table
 
