--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
@@ -17,10 +17,10 @@ oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
 ###############################################################################
 # NLS String
 ###############################################################################
-plugin.name=DTP ODA Flat File Run-time Driver
+plugin.name=Eclipse Data Tools Platform Flat File ODA Runtime Driver
 datasource.name=Flat File Data Source
 dataset.name=Flat File Data Set
-oda.data.source.category.name=CSV Flat Files
+oda.data.source.category.name=Flat File Data Source
 connection.profile.name=ODA Flat File Data Source Connection Profile
 
 datasource.property.home=Home &Folder
