--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -135,3 +135,7 @@ DriverClassBrowsePropertyDescriptor.noclasses.msg = There are no driver classes 
 StatusBar.Connected = Connected
 StatusBar.Disconnected = Disconnected
 StatusBar.ConnectedMessage = {0} ({1})
+StatusBar.WorkingOffline = Working offline
+
+DATATOOLS.SERVER.UI.EXPLORER.WORKOFFLINE = &Work Offline
+DATATOOLS.SERVER.UI.EXPLORER.UPDATE_OFFLINE = &Save Offline
