--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -52,3 +52,16 @@ migration.error.unknownParentElement = Error loading migration element: unknown 
 DriverUtil.taskName = Procesing Classes in {0}
 
 Category.Name.Unknown=Unsupported
+
+WorkOfflineJob.name = Changing {0} to work offline mode.
+WorkOfflineJob.status.error = Could not create offline connections to {1} for one or more extensions.
+
+SaveWorkOfflineDataJob.name = Save offline data for {1}.
+SaveWorkOfflineDataJob.status = Save offline data status.
+
+CreateOfflineConnectionJob.name = Creating offline {0} connection to {1}.
+CreateOfflineConnectionJob.error = Error creating offline {0} connection to {1}. (Error\: {2})
+
+ManagedConnection_save_not_connected_error = Must be connected to server to save offline data.
+ManagedConnection_offline_not_supported_error = {0} does not support working offline.
+
