--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -25,7 +25,7 @@ NewFileWithProfilePage.error.profile=Select a database connection profile for th
 
 ScrapbookEditor.name=SQL File Editor
 
-datatools.preferences.sqlfile.name=SQL Files
+datatools.preferences.sqlfile.name=SQL Files/Scrapbooks
 
 DatabaseManagement.command.attach=Set Connection Information
 
