--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/plugin.xml
@@ -141,16 +141,13 @@
                   relative="org.eclipse.debug.ui.DebugView"
                   id="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator"/>                
              
-             <!-- Add New Wizards !-->
-             <newWizardShortcut id="org.eclipse.datatools.sqltools.internal.sqlscrapbook.wizards.NewSQLScrapbookFileCreationWizard"/>
-             
              <!-- Add View Shortcuts !-->
             <viewShortcut id="org.eclipse.debug.ui.DebugView" />  
             <viewShortcut id="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator" />
             <viewShortcut id="org.eclipse.debug.ui.VariableView" />
             <viewShortcut id="org.eclipse.debug.ui.BreakpointView" />
             <viewShortcut id="org.eclipse.datatools.sqltools.result.resultView" />
-                        
+            <viewShortcut id="org.eclipse.ui.views.ContentOutline" />            
             <!-- Add Perspective shortcuts !-->
             <perspectiveShortcut id="ConfigPerspective" />
             <perspectiveShortcut id="org.eclipse.datatools.sqltools.sqleditor.perspectives.EditorPerspective" />
