[175007] extend ddl generation support to other object types (sp, udf, udt, assertion)

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/src/org/eclipse/datatools/connectivity/sqm/internal/core/rte/fe/GenericDdlGeneration.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/src/org/eclipse/datatools/connectivity/sqm/internal/core/rte/fe/GenericDdlGeneration.properties
@@ -32,3 +32,4 @@ GENERATION_OPTIONS = Generation options
 GENERATION_OPTIONS_DES = Options for generation
 ADDITIONAL_ELEMENTS = Additional elements
 ADDITIONAL_ELEMENTS_DES = Generate additional elements
+GENERATE_GENERATE_ASSERTION_DES = Generate assertions
