--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/build.properties
@@ -4,4 +4,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                plugin.properties,\
-               icons/
+               icons/,\
+               about.html,\
+               about_files/
