--- a/tests/org.eclipse.datatools.enablement.oda.ws.test/build.properties
+++ b/tests/org.eclipse.datatools.enablement.oda.ws.test/build.properties
@@ -1,3 +1,5 @@
 source.. = test/
 output.. = bin/
-bin.includes = META-INF/
+bin.includes = META-INF/,\
+               .,\
+               about.html
