180187 NLS33: Translation Question

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
@@ -34,24 +34,24 @@ SQLEditor_typingAidsTable_columnName3=Description
 
 SQLEditor_closeSingleQuotes=Close single quotes
 SQLEditor_closeSingleQuotes_description=If enabled, close single quotes.
-SQLEditor_closeSingleQuotes_preview='{cursor}'
+SQLEditor_closeSingleQuotes_preview='${cursor}'
 
 SQLEditor_closeDoubleQuotes=Close double quotes
 SQLEditor_closeDoubleQuotes_description=If enabled, close double quotes.
-SQLEditor_closeDoubleQuotes_preview="{cursor}"
+SQLEditor_closeDoubleQuotes_preview="${cursor}"
 
-SQLEditor_closeBrackets=Close braces
-SQLEditor_closeBrackets_description=If enabled, close braces.
-SQLEditor_closeBrackets_preview=({cursor})
+SQLEditor_closeBrackets=Close parentheses
+SQLEditor_closeBrackets_description=If enabled, close parentheses.
+SQLEditor_closeBrackets_preview=(${cursor})
 
 SQLEditor_closeComments=Close comments
 SQLEditor_closeComments_description=If enabled, close SQL multi-line comments.
-SQLEditor_closeComments_preview=/*\n *{cursor}\n */
+SQLEditor_closeComments_preview=/*\n *${cursor}\n */
 
 
 SQLEditor_beginEndStatement=Begin-End
 SQLEditor_beginEndStatement_description=Add the 'end' with proper indentation, then move the cursor to a new line between Begin/End with proper indentation.
-SQLEditor_beginEndStatement_preview=BEGIN\n\t{cursor}\nEND
+SQLEditor_beginEndStatement_preview=BEGIN\n\t${cursor}\nEND
 
 SQLEditor_typingAidsTable_context_all=All
 
