--- a/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.xml
@@ -15,11 +15,15 @@
       <page
             class="org.eclipse.datatools.connectivity.db.generic.ui.GenericDBProfilePropertyPage"
             id="org.eclipse.datatools.connectivity.db.generic.profileProperties"
-            name="%page.name.jdbcConnectionProperties"
-            objectClass="org.eclipse.datatools.connectivity.IConnectionProfile">
+            name="%page.name.jdbcConnectionProperties">
          <filter
                name="org.eclipse.datatools.profile.property.id"
                value="org.eclipse.datatools.connectivity.db.generic.connectionProfile"/>
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipse.datatools.connectivity.IConnectionProfile">
+            </instanceof>
+         </enabledWhen>
       </page>
    </extension>
 
