Fix Bugzilla Bug 189383 189253

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/plugin.properties
@@ -27,7 +27,8 @@ profile.propertypage.name=Web Services Data Source Connection Properties
 wizard.data.set.window.title=New Web Services Data Set
 wizard.data.set.page.title=Query
 
-oda.ws.operation=Operation
+oda.ws.operation=WSDL Operation
+oda.ws.soapparameters=SOAP Parameters
 oda.ws.soaprequest=SOAP Request
 oda.ws.soapresponse=SOAP Response
 oda.ws.tablemapping=Table Mapping
