[BZ189737, 189018] Updates to help interfaces to adjust for doc changes, revised fix for DSE tooltip issue

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
@@ -20,6 +20,7 @@ DSE.Connect.label = &Connect
 DSE.Disconnect.label = &Disconnect
 DSE.SelectAll.label = Select &All
 DSE.DeselectAll.label = &Deselect All
+DSE.View.Tooltip = Data Source Explorer
 ServersView.action.newCP = &New...
 ProfileSelectionDialogPage.validation.error = Please select a profile.
 NewConnectionProfileWizard.title = New connection profile
