--- a/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
@@ -1,6 +1,6 @@
 #
 #*************************************************************************
-# Copyright (c) 2004, 2006 Actuate Corporation.
+# Copyright (c) 2004, 2007 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -11,7 +11,7 @@
 #  
 #*************************************************************************
 #
-# $Id: build.properties,v 1.3 2006/10/24 10:42:14 lzhu Exp $
+# $Id: build.properties,v 1.4 2007/02/09 23:48:45 rcernich Exp $
 #
 bin.includes = about.html,\
                plugin.xml,\
