[BZ189947] Externalizing SQL Model Connection string

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.properties
@@ -19,3 +19,4 @@ ForwardEngineeringExtensionPointName=Forward Engineering
 CatalogExtensionPointName=Database Catalog
 DatabaseRecognition=Database Recognition
 FilterProfileExtensionName=SQL Model Filter Settings
+SQLModelConnectionName=SQL Model Connection
