Fix Bugzilla Bug 190624 Mnemonic missing on oda WS and XML's Data Source Property Labels

--- a/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.properties
@@ -23,9 +23,9 @@ oda.data.source.category.name=XML Data Source
 datasource.name=XML Data Source
 dataset.name=XML Data Set
 
-datasource.property.xmlFile=XML Data Source File
-datasource.property.xmlEncoding=XML Date Source Encoding
-datasource.property.schemaFile=XML Schema File
+datasource.property.xmlFile=&XML Data Source File
+datasource.property.xmlEncoding=XML Date Source &Encoding
+datasource.property.schemaFile=XML &Schema File
 oda.data.source.name=XML Data Source
 connection.profile.name=XML Data Source Connection Profile
 #
