--- a/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.properties
@@ -22,8 +22,8 @@ data.set.name=Web Services Data Set
 
 connection.profile.name=Web Services Data Source Connection Profile
 
-datasource.property.soapEndPoint=SOAP End Point
-datasource.property.connectionClass=Connection Class
-datasource.property.connectionTimeOut=Connection Time Out
+datasource.property.soapEndPoint=&SOAP End Point
+datasource.property.connectionClass=Connection &Class
+datasource.property.connectionTimeOut=Connection &Time Out
 dataset.property.xmlFileURI=XML File
 dataset.property.xsdFileURI=Schema File
