191702: Add preference option to toggle long/short syntax validation messages

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
@@ -26,6 +26,9 @@ SQLEditor_maxLineButton=&Maximum number of lines:
 SQLEditor_maxLineButton_tooltip=Disable syntax validation when content exceeds maximum number of lines
 SQLEditor_showPromptDialog=Prompt to disable syntax validation when content exceeds maximum number of lines
 
+SQLEditor_showSyntaxErorrDetail=S&how detailed annotation information
+SQLEditor_showSyntaxErorrDetail_tooltip=Show detailed annotation information, such as some syntax proposals
+
 SQLEditor_typing_title=&Typing
 SQLEditor_typingAidsGroup_title=Enable these typing aids in Smart Insert mode:
 SQLEditor_typingAidsTable_columnName1=Name
