[192084] enable new profile action for local repository node

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
@@ -241,6 +241,7 @@
                <or>
                   <instanceof value="org.eclipse.datatools.connectivity.ICategory"/>
                   <instanceof value="org.eclipse.datatools.connectivity.IConnectionProfile"/>
+           		  <instanceof value="org.eclipse.datatools.connectivity.internal.ui.LocalRepositoryNode" />
                </or>
             </enablement>
          </actionProvider>
