--- a/plugins/org.eclipse.datatools.modelbase.sql.query/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query/build.properties
@@ -1,13 +1,14 @@
-source.sqlquerymodel.jar = src/
-output.sqlquerymodel.jar = bin/
-bin.includes = plugin.xml,\
-               sqlquerymodel.jar,\
-               plugin.properties,\
-               META-INF/
-
-jars.extra.classpath =
+source.. = src/
+output.. = bin/
+bin.includes = META-INF/,\
+               model/,\
+               .,\
+               plugin.xml,\
+               about.html,\
+               plugin.properties
+               
 src.dir =		src/
-plugin.version =	1.0.0.200706071
+plugin.version =	1.0.0.200706151
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
