--- a/plugins/org.eclipse.datatools.modelbase.sql.xml.query/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.xml.query/build.properties
@@ -1,14 +1,14 @@
-source.sqlxmlquerymodel.jar = src/
-output.sqlxmlquerymodel.jar = bin/
-bin.includes = plugin.xml,\
-               META-INF/,\
-               sqlxmlquerymodel.jar,\
-               META-INF/,\
+source.. = src/
+output.. = bin/
+bin.includes = META-INF/,\
+               model/,\
+               .,\
+               plugin.xml,\
+               about.html,\
                plugin.properties
 
-jars.extra.classpath =
 src.dir =		src/
-plugin.version =	1.0.0.200706071
+plugin.version =	1.0.0.200706151
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
