[191765], [191768] Updated .project file to remove extraneous builder and updated MANIFEST.MF and build.properties to single-jar the plugin

--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/build.properties
@@ -1,45 +1,18 @@
-source.sqlqueryparser.jar = src/
-output.sqlqueryparser.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
-               sqlqueryparser.jar,\
+               .,\
                plugin.properties,\
-               bin/,\
                schema/,\
                META-INF/,\
                about.html
 src.includes = src/,\
-               plugin.xml,\
                .classpath,\
-               .project,\
-               plugin.properties,\
-               schema/,\
                templates/,\
-               bin/,\
                build.properties
-src.excludes = src/com/ibm/db/parsers/sql/query/.cvsignore,\
-               src/com/ibm/db/parsers/sql/query/Main.java,\
-               src/com/ibm/db/parsers/sql/query/Option.java,\
-               src/com/ibm/db/parsers/sql/query/sqlquerylexer.l,\
-               src/com/ibm/db/parsers/sql/query/sqlquerylexer.lpg,\
-               src/com/ibm/db/parsers/sql/query/sqlquerylexerKeywords.lpg,\
-               src/com/ibm/db/parsers/sql/query/sqlquerylexerTemplate.lpg,\
-               src/com/ibm/db/parsers/sql/query/sqlqueryparser.l,\
-               src/com/ibm/db/parsers/sql/query/sqlqueryparser.lpg,\
-               src/com/ibm/db/parsers/sql/query/sqlqueryparserAlias.lpg,\
-               src/com/ibm/db/parsers/sql/query/sqlqueryparserRules.lpg,\
-               src/com/ibm/db/parsers/sql/query/sqlqueryparserTemplate.lpg,\
-               src/com/ibm/db/parsers/sql/query/sqlqueryparserTypes.lpg,\
-               src/com/ibm/db/parsers/sql/query/test/delete.sql,\
-               src/com/ibm/db/parsers/sql/query/test/insert.sql,\
-               src/com/ibm/db/parsers/sql/query/test/select1.sql,\
-               src/com/ibm/db/parsers/sql/query/test/select2.sql,\
-               src/com/ibm/db/parsers/sql/query/test/test.sql,\
-               src/com/ibm/db/parsers/sql/query/test/update.sql,\
-               src/com/ibm/db/parsers/sql/query/test/update_conditions.sql
-            
-jars.extra.classpath =
+                           
 src.dir =		src/
-plugin.version =	1.0.0.200706071
+plugin.version =	1.0.0.200706151
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
