--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/.project
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/.project
@@ -12,12 +12,12 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>com.ibm.sse.model.structuredbuilder</name>
+			<name>org.eclipse.pde.ManifestBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>com.ibm.etools.validation.validationbuilder</name>
+			<name>org.eclipse.pde.SchemaBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
