--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql/build.properties
@@ -1,23 +1,17 @@
-source.sqlparser.jar = src/
-output.sqlparser.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
-               sqlparser.jar,\
-               thirdparty/lpg.jar,\
+               .,\
                plugin.properties,\
                META-INF/,\
                about.html
 src.includes = src/,\
-               thirdparty/lpg.jar,\
-               plugin.xml,\
                .classpath,\
-               .project,\
-               build.properties,\
-               plugin.properties
+               build.properties
 
-jars.extra.classpath =
-src.dir =		src/
-plugin.version =	1.0.0.200706071
-javadoc.dir =		doc/api/
-download.dir =		./download/
-javac.source =		1.4
-javac.target =		1.4
+src.dir = src/
+plugin.version = 1.0.0.200706151
+javadoc.dir = doc/api/
+download.dir = ./download/
+javac.source = 1.4
+javac.target = 1.4
